update obsolete settings deleted in tmux 2.9a

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,8 +59,6 @@ set-option -g status-interval 5    # second
 set-option -g status-justify "left"
 
 # Status bar color
-set-option -g status-fg "colour255"
-set-option -g status-bg "colour238"
 
 # Status-Left
 set-option -g status-left-length 30
@@ -98,10 +96,6 @@ set-option -g renumber-windows off
 # Pane
 # 
 # Pane border
-set-option -g pane-active-border-fg "colour22"
-set-option -g pane-active-border-bg "colour22"
-set-option -g pane-border-fg "colour235"
-set-option -g pane-border-bg "colour235"
 
 
 
@@ -130,27 +124,22 @@ run '~/.tmux/plugins/tpm/tpm'
 #### COLOUR (Solarized dark)
 
 # default statusbar colors
-set-option -g status-bg black #base02
-set-option -g status-fg yellow #yellow
-set-option -g status-attr default
+set-option -g status-style fg="colour255",bg="colour238",bg=black,fg=yellow,default
 
 # default window title colors
-set-window-option -g window-status-fg brightblue #base0
-set-window-option -g window-status-bg default
+set-window-option -g window-status-style fg=brightblue,bg=default
 #set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-style fg=brightred,bg=default
 #set-window-option -g window-status-current-attr bright
 
 # pane border
-set-option -g pane-border-fg black #base02
-set-option -g pane-active-border-fg brightgreen #base01
+set-option -g pane-border-style fg="colour235",bg="colour235",fg=black
+set-option -g pane-active-border-style fg="colour22",bg="colour22",fg=brightgreen
 
 # message text
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
+set-option -g message-style bg=black,fg=brightred
 
 # pane number display
 set-option -g display-panes-active-colour blue #blue
